--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,16 +6,22 @@
   
 	<display-name>Hub Application</display-name>
 	
+	<listener>
+		<listener-class>com.sample.logger.listener.RequestListener</listener-class>
+	</listener>
+	
 	<servlet>
-		<servlet-name>hub-mvc-dispatcher</servlet-name>
+		<servlet-name>logger-mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>hub-mvc-dispatcher</servlet-name>
+		<servlet-name>logger-mvc-dispatcher</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	
+	
 	
 	
 </web-app>
