--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-/target/
+*.DS_Store
+dist
+build
+bin
+rebel.xml
+MANIFEST.MF
+.settings
+/tests/
+/coverage/
+/cobertura.ser
+*.class
+*.jar
+*.zip
+*/target/*
+*/temp_persist_config_*.xml
+*/src/main/resources/buildinfo.properties
+/.idea/
+**/*.iml
+build.xml
+/.metadata
+/.project
+/target
+.project
+.classpath
